--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -969,6 +969,7 @@ allow 23.137.254.137;
 allow 23.151.8.8;
 allow 23.153.248.33;
 allow 23.153.248.34;
+allow 23.155.8.104;
 allow 23.184.48.13;
 allow 23.184.48.78;
 allow 23.191.200.10;
@@ -981,7 +982,6 @@ allow 23.191.200.16;
 allow 23.191.200.17;
 allow 23.191.200.18;
 allow 23.191.200.19;
-allow 23.191.200.2;
 allow 23.191.200.20;
 allow 23.191.200.21;
 allow 23.191.200.22;
@@ -992,10 +992,6 @@ allow 23.191.200.26;
 allow 23.191.200.27;
 allow 23.191.200.28;
 allow 23.191.200.29;
-allow 23.191.200.3;
-allow 23.191.200.30;
-allow 23.191.200.31;
-allow 23.191.200.4;
 allow 23.191.200.5;
 allow 23.191.200.6;
 allow 23.191.200.7;
@@ -1029,6 +1025,7 @@ allow 2600:3c0a::f03c:95ff:fe5d:a877;
 allow 2600:3c0b::f03c:95ff:fefa:bdff;
 allow 2602:2da:0:33:5054:ff:fe6c:39dc;
 allow 2602:2da:0:34:5054:ff:fe7e:7c21;
+allow 2602:2e5::104;
 allow 2602:fa8a:3:a::a;
 allow 2602:fc24:10:61b::1;
 allow 2602:fc24:12:81a6::1;
@@ -1674,6 +1671,7 @@ allow 2c0f:6c0:0:4::95ea;
 allow 31.133.0.210;
 allow 31.184.236.104;
 allow 31.44.238.25;
+allow 34.28.104.198;
 allow 35.0.127.52;
 allow 37.120.239.59;
 allow 37.187.5.192;
@@ -1694,7 +1692,6 @@ allow 45.12.3.80;
 allow 45.128.133.242;
 allow 45.132.246.245;
 allow 45.134.225.36;
-allow 45.135.232.234;
 allow 45.137.99.10;
 allow 45.137.99.144;
 allow 45.137.99.216;
@@ -1893,7 +1890,6 @@ allow 83.96.213.63;
 allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.19.182.20;
-allow 84.211.226.13;
 allow 84.239.46.144;
 allow 85.239.41.130;
 allow 85.239.55.192;
