--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -969,6 +969,7 @@ deny 23.137.254.137;
 deny 23.151.8.8;
 deny 23.153.248.33;
 deny 23.153.248.34;
+deny 23.155.8.104;
 deny 23.184.48.13;
 deny 23.184.48.78;
 deny 23.191.200.10;
@@ -981,7 +982,6 @@ deny 23.191.200.16;
 deny 23.191.200.17;
 deny 23.191.200.18;
 deny 23.191.200.19;
-deny 23.191.200.2;
 deny 23.191.200.20;
 deny 23.191.200.21;
 deny 23.191.200.22;
@@ -992,10 +992,6 @@ deny 23.191.200.26;
 deny 23.191.200.27;
 deny 23.191.200.28;
 deny 23.191.200.29;
-deny 23.191.200.3;
-deny 23.191.200.30;
-deny 23.191.200.31;
-deny 23.191.200.4;
 deny 23.191.200.5;
 deny 23.191.200.6;
 deny 23.191.200.7;
@@ -1029,6 +1025,7 @@ deny 2600:3c0a::f03c:95ff:fe5d:a877;
 deny 2600:3c0b::f03c:95ff:fefa:bdff;
 deny 2602:2da:0:33:5054:ff:fe6c:39dc;
 deny 2602:2da:0:34:5054:ff:fe7e:7c21;
+deny 2602:2e5::104;
 deny 2602:fa8a:3:a::a;
 deny 2602:fc24:10:61b::1;
 deny 2602:fc24:12:81a6::1;
@@ -1674,6 +1671,7 @@ deny 2c0f:6c0:0:4::95ea;
 deny 31.133.0.210;
 deny 31.184.236.104;
 deny 31.44.238.25;
+deny 34.28.104.198;
 deny 35.0.127.52;
 deny 37.120.239.59;
 deny 37.187.5.192;
@@ -1694,7 +1692,6 @@ deny 45.12.3.80;
 deny 45.128.133.242;
 deny 45.132.246.245;
 deny 45.134.225.36;
-deny 45.135.232.234;
 deny 45.137.99.10;
 deny 45.137.99.144;
 deny 45.137.99.216;
@@ -1893,7 +1890,6 @@ deny 83.96.213.63;
 deny 83.97.20.77;
 deny 84.16.224.227;
 deny 84.19.182.20;
-deny 84.211.226.13;
 deny 84.239.46.144;
 deny 85.239.41.130;
 deny 85.239.55.192;
