--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -115,9 +115,9 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 113.20.31.38;
+set_real_ip_from 114.178.141.121;
 set_real_ip_from 114.35.245.150;
 set_real_ip_from 1.168.166.211;
-set_real_ip_from 118.0.52.63;
 set_real_ip_from 118.163.74.160;
 set_real_ip_from 118.193.64.139;
 set_real_ip_from 118.194.231.50;
@@ -306,6 +306,7 @@ set_real_ip_from 185.158.249.155;
 set_real_ip_from 185.165.169.239;
 set_real_ip_from 185.165.171.84;
 set_real_ip_from 185.170.114.25;
+set_real_ip_from 185.177.151.34;
 set_real_ip_from 185.183.157.214;
 set_real_ip_from 185.183.159.40;
 set_real_ip_from 185.191.204.254;
@@ -546,7 +547,6 @@ set_real_ip_from 185.40.4.38;
 set_real_ip_from 185.40.4.44;
 set_real_ip_from 185.40.4.64;
 set_real_ip_from 185.40.4.92;
-set_real_ip_from 185.42.12.136;
 set_real_ip_from 185.42.170.203;
 set_real_ip_from 185.56.171.94;
 set_real_ip_from 185.56.83.83;
@@ -695,6 +695,7 @@ set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.48.35;
 set_real_ip_from 198.98.50.199;
 set_real_ip_from 198.98.51.189;
+set_real_ip_from 198.98.51.249;
 set_real_ip_from 198.98.57.151;
 set_real_ip_from 198.98.57.74;
 set_real_ip_from 198.98.62.158;
@@ -1049,6 +1050,7 @@ set_real_ip_from 2604:b480:3:6::2;
 set_real_ip_from 2605:2700:0:2:a800:ff:fe39:574;
 set_real_ip_from 2605:6400:10:1008:1111:1111:1111:1111;
 set_real_ip_from 2605:6400:10:1362::2;
+set_real_ip_from 2605:6400:10:1ab:2605:6400:10:1ab;
 set_real_ip_from 2605:6400:10:44f::1;
 set_real_ip_from 2605:6400:10:58f:8768:8283:1a62:bdc6;
 set_real_ip_from 2605:6400:10:75:1585:9b71:1c16:b1a1;
@@ -1937,6 +1939,7 @@ set_real_ip_from 82.221.131.5;
 set_real_ip_from 82.221.131.86;
 set_real_ip_from 82.221.139.190;
 set_real_ip_from 83.217.9.73;
+set_real_ip_from 83.96.213.63;
 set_real_ip_from 83.97.20.77;
 set_real_ip_from 84.16.224.227;
 set_real_ip_from 84.19.182.20;
