--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -117,11 +117,12 @@ allow 109.70.100.71;
 allow 113.20.31.38;
 allow 114.178.141.121;
 allow 114.35.245.150;
-allow 1.168.166.91;
+allow 114.41.28.222;
 allow 118.163.74.160;
 allow 118.193.64.139;
 allow 118.194.231.50;
 allow 119.28.139.55;
+allow 121.78.28.166;
 allow 123.253.35.32;
 allow 124.198.131.108;
 allow 125.212.241.131;
@@ -148,6 +149,7 @@ allow 144.172.118.55;
 allow 144.172.118.73;
 allow 146.59.126.232;
 allow 146.59.231.4;
+allow 147.45.116.145;
 allow 148.113.152.91;
 allow 149.202.79.101;
 allow 149.202.79.129;
@@ -257,6 +259,7 @@ allow 179.43.159.78;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.220.56.84;
 allow 184.75.221.43;
 allow 185.100.85.132;
 allow 185.100.85.24;
@@ -276,6 +279,7 @@ allow 185.112.144.11;
 allow 185.112.146.167;
 allow 185.113.128.30;
 allow 185.120.16.171;
+allow 185.120.16.176;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
@@ -529,6 +533,7 @@ allow 185.254.196.141;
 allow 185.34.33.2;
 allow 185.35.202.222;
 allow 185.38.175.133;
+allow 185.39.207.83;
 allow 185.40.4.100;
 allow 185.40.4.101;
 allow 185.40.4.121;
@@ -658,6 +663,7 @@ allow 194.15.113.118;
 allow 194.15.115.212;
 allow 194.163.157.49;
 allow 194.26.192.77;
+allow 194.53.137.156;
 allow 194.87.55.98;
 allow 195.160.220.104;
 allow 195.176.3.23;
@@ -922,6 +928,7 @@ allow 204.8.96.88;
 allow 204.8.96.89;
 allow 205.185.113.180;
 allow 205.185.113.8;
+allow 205.185.116.215;
 allow 205.185.116.34;
 allow 205.185.117.149;
 allow 205.185.118.31;
@@ -1239,7 +1246,6 @@ allow 2a00:1dc0:caff:73::a568;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:4d80::1;
 allow 2a00:99a0:0:1000::2;
-allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:4262:1ab:ffff::133;
 allow 2a01:4f9:2b:75d::124:148;
@@ -1311,6 +1317,7 @@ allow 2a04:52c0:130:896e::1;
 allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:541:110:20::1;
 allow 2a05:541:110:3e::1;
+allow 2a05:541:112:31::1;
 allow 2a05:b0c7:6388::1;
 allow 2a05:b0c7:655b::1;
 allow 2a05:b0c7:67c6::1;
@@ -1561,6 +1568,7 @@ allow 2a0d:bbc7:0:1::3d5;
 allow 2a0d:bbc7:0:1::50;
 allow 2a0d:bbc7:0:1::7f;
 allow 2a0d:c2c0:1:4::2;
+allow 2a0e:1d80:13:51e8::1;
 allow 2a0e:1d80:17:6f8d::1;
 allow 2a0e:4005:1002:ffff:185:40:4:100;
 allow 2a0e:4005:1002:ffff:185:40:4:101;
@@ -1671,8 +1679,10 @@ allow 2a12:a800:9:1:193:26:115:61;
 allow 2c0f:6c0:0:2::6983;
 allow 2c0f:6c0:0:3::479d;
 allow 2c0f:6c0:0:4::95ea;
+allow 31.129.22.65;
 allow 31.133.0.210;
 allow 31.184.236.104;
+allow 31.220.75.237;
 allow 31.44.238.25;
 allow 35.0.127.52;
 allow 37.120.239.59;
@@ -1683,7 +1693,6 @@ allow 37.228.129.5;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 37.77.56.238;
-allow 38.242.254.131;
 allow 38.97.116.242;
 allow 38.97.116.243;
 allow 38.97.116.244;
@@ -1868,7 +1877,6 @@ allow 77.81.247.72;
 allow 78.142.18.219;
 allow 78.159.131.96;
 allow 79.100.235.29;
-allow 79.127.129.160;
 allow 80.241.60.207;
 allow 80.67.167.81;
 allow 80.67.172.162;
@@ -1956,9 +1964,11 @@ allow 94.16.121.91;
 allow 94.230.208.147;
 allow 94.230.208.148;
 allow 94.72.103.33;
+allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.142.161.63;
 allow 95.143.193.125;
+allow 95.168.173.143;
 allow 95.211.244.28;
 allow 95.216.107.148;
 allow 96.66.15.152;
